crates/near-kit-macros/tests/compile-fail/mut_without_call_attr.rs
//! Test: &mut self method without #[call] attribute should fail

use near_kit::*;

#[near_kit::contract]
pub trait BadContract {
    fn mutate(&mut self);
}

fn main() {}
